<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crime_title">Title</string>
    <string name="editCrime">Type Crime here!</string>
    <string name="date_title">Date</string>
    <string name="solved_crime">Solved</string>
    <string name="call_police">Call Police!</string>
    <string name="date_of_crime">Crime Date</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
     The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>


</resources>
