<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_crime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/crime_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"
                 />

            <ImageButton
                android:id="@+id/crime_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCrimeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_title"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editCrime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editCrime"

                 />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textDateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_title"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_title"
        />

    <CheckBox
        android:id="@+id/checkBoxCrime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solved_crime" />


    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"
        />

    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"
        />



</LinearLayout>